topmenu and promo nav text overflow fixed

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -98,6 +98,7 @@
   font-size: 14px;
   display: inline-block;
   padding: 0 5px;
+  white-space: nowrap;
 }
 
 .verticalLeftSlider > i {
